Final Commit Dashboard

--- a/public/HTML/dashboard.html
+++ b/public/HTML/dashboard.html
@@ -1,5 +1,4 @@
 ﻿<!DOCTYPE html>
-
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
@@ -21,12 +20,15 @@
         <aside id="custom_menu">
             <a>
                 <img src="../res/map.svg" />
+                <span>EXAMPLE_STRING_!</span>
             </a>
             <a>
                 <img src="../res/map.svg" />
+                <span>EXAMPLE_STRING_!</span>
             </a>
             <a>
                 <img src="../res/map.svg" />
+                <span>EXAMPLE_STRING_!_________MAX</span>
             </a>
         </aside>
         <div id="content">
