Renamed and relinked files, added newContact.html and newContact.css

--- a/public/HTML/login.html
+++ b/public/HTML/login.html
@@ -8,7 +8,7 @@ and open the template in the editor.
    
  
  <head>
-  <link href="newcss.css" rel="stylesheet">
+  <link href="../CSS/login.css" rel="stylesheet">
  
  </head>
 
