Ordnerstruktur, Dashboard.html

--- a/public/HTML/dashboard.html
+++ b/public/HTML/dashboard.html
@@ -4,7 +4,11 @@
     <meta charset="utf-8" />
     <title>Dashboard</title>
     <link rel="stylesheet" href="../CSS/dashboard.css" />
+    <link rel="stylesheet" href="../CSS/fullcalendar.css" />
     <script type="text/javascript" src="../JSCRIPT/jquery-3.2.1.js"></script>
+    <script type="text/javascript" src="../JSCRIPT/moment.min.js"></script>
+    <script type="text/javascript" src="../JSCRIPT/fullcalendar.js"></script>
+    <script type="text/javascript" src="../JSCRIPT/de-at.js"></script>
     <script type="text/javascript" src="../JSCRIPT/dashboard.js"></script>
 </head>
 <body>
@@ -32,11 +36,14 @@
             </a>
         </aside>
         <div id="content">
-            <p>
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-
-                Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet,
-            </p>
+            <div id="calendar"></div>
+            <div id="todoList">
+                <ul></ul>
+                <div id="ctrl-todo-new">
+                    <input type="text" placeholder="TODO" id="input_TODO" />
+                    <button id="newTodo">Confirm</button>
+                </div>
+            </div>
         </div>
     </div>
     <footer>
