Reworked some of the markup

--- a/public/HTML/debug.html
+++ b/public/HTML/debug.html
@@ -16,5 +16,13 @@
     <hr />
     <a href="profile.html">Profil</a>
     <hr />
+    <a href="administrative-user.html">Admin-User</a>
+    <hr />
+    <a href="bearbeiten.html">Bearbeiten.html</a>
+    <hr />
+    <a href="bestaetigen.html">Bestätigen.html</a>
+    <hr />
+    <a href="hinzufuegen.html">hinzufügen.html</a>
+    <hr />
 </body>
 </html>
