--- a/public/HTML/hinzufuegen.html
+++ b/public/HTML/hinzufuegen.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--
 To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
@@ -17,6 +17,6 @@ and open the template in the editor.
         <div>Auftraggeber: </div>
         <div>kurze Beschreibung: </div>
         <br>
-        <button id="btn3"onclick="window.open('index.html','_self')">SPEICHERN</button>
+        <button id="btn3"onclick="window.open('administrative-user.html','_self')">SPEICHERN</button>
     </body>
 </html>
