--- a/public/HTML/debug.html
+++ b/public/HTML/debug.html
@@ -3,7 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>Debug Site</title>
 </head>
 <body>
     <a href="dashboard.html">Dashboard</a>
@@ -23,6 +23,12 @@
     <a href="bestaetigen.html">Bestätigen.html</a>
     <hr />
     <a href="hinzufuegen.html">hinzufügen.html</a>
+    <hr />
+    <a href="termin.html">termin.html</a>
+    <hr />
+    <a href="termin_bearbeiten.html">termin_bearbeiten.html</a>
+    <hr />
+    <a href="termin_hinzufuegen.html">termin_hinzufuegen.html</a>
     <hr />
 </body>
 </html>
