--- a/public/HTML/login.html
+++ b/public/HTML/login.html
@@ -8,6 +8,7 @@ and open the template in the editor.
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
+    <title>Login</title>
     <link href="../CSS/login.css" rel="stylesheet">
 </head>
 <body>
