--- a/public/HTML/termin.html
+++ b/public/HTML/termin.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--
 To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
@@ -11,7 +11,7 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!--Responsive  -->
-        <link rel="stylesheet" href="termine_css.css">
+        <link rel="stylesheet" href="../CSS/termine_css.css">
     </head>
     <body>
         <h2>Termin</h2>
