--- a/public/HTML/termin_bearbeiten.html
+++ b/public/HTML/termin_bearbeiten.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--
 To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
@@ -16,18 +16,22 @@ and open the template in the editor.
 
         <h2>Termin bearbeiten</h2>
         <p>Titel<input type="text" /></p>
-        <p>Beginn<input type="text" />
+        <p>
+            Beginn<input type="date" />
 
             <i style="font-size:24px" class="fa">&#xf073;</i> <!-- i Tag für das Icon des Kalenders  -->
-
+        </p>
+        
         <form id="gotokalender" name="gotokalender" action="total.php" method="GET">
             <input id="calendar-inputField" name="startDate" type="hidden"/>
         </form>
 
-       <p>Ende<input type="text" />
+        <p>
+            Ende<input type="date" />
 
             <i style="font-size:24px" class="fa">&#xf073;</i>
-
+        </p>
+        
         <form id="gotokalender" name="gotokalender" action="total.php" method="GET">
             <input id="calendar-inputField" name="startDate" type="hidden"/>
         </form>
