--- a/public/HTML/termin.html
+++ b/public/HTML/termin.html
@@ -12,6 +12,9 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> <!--Responsive  -->
         <link rel="stylesheet" href="../CSS/termine_css.css">
+        <script type="text/javascript" src="../JSCRIPT/jquery-3.2.1.js"></script>
+        <script type="text/javascript" src="../JSCRIPT/knockout-3.4.2.js"></script>
+        <script type="text/javascript" src="../JSCRIPT/Termine.js"></script>
     </head>
     <body>
         <h2>Termin</h2>
