--- a/public/HTML/89_administrative-user.html
+++ b/public/HTML/89_administrative-user.html
@@ -6,7 +6,7 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>89 Administrative_User</title>
+        <title>89_Administrative_User</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="../CSS/administrative-user.css">
