90_terminuebersicht bearbeitet, generalLayout teilimplemetiert

--- a/public/HTML/90_terminuebersicht.html
+++ b/public/HTML/90_terminuebersicht.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8" />
     <title></title>
     <link rel="stylesheet" type="text/css" href="../CSS/90_terminuebersicht.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/generalLayout.css">
+    <script type="text/javascript" src="../JSCRIPT/jquery-3.2.1.js"></script>
+    <script type="text/javascript" src="../JSCRIPT/90_appointment_overview.js"></script>
 </head>
 <body>
     <h1>Terminübersicht</h1>
@@ -23,8 +26,8 @@
             <td></td>
         </tr>
     </table>
-    <button>Details</button>
-    <button>Termin bearbeiten</button>
-    <button>Termin erstellen</button>
+    <button id="btn_details">Details</button>
+    <button id="btn_modify_appointment">Termin bearbeiten</button>
+    <button id="btn_create_appointment">Termin erstellen</button>
 </body>
 </html>
