--- a/public/HTML/86_contact_details.html
+++ b/public/HTML/86_contact_details.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="../CSS/86_contact_details.css" />
 </head>
 	<body>
